# moire-remover

./: .gitignore  README.md  main.c  pubspec.yaml  qdbmp.c  run.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/moire_remover/: MainActivity.kt
fourier_library/: CMakeLists.txt  fourier_library.c  fourier_library.def  fourier_library.h  main.c  qdbmp.h  run.sh
lib/: common.dart  generated_bindings.dart  main.dart
lib/screens/: fourier_filter_paint.dart  input_image_selection.dart  output_image_view.dart
lib/widgets/: interactive_image.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
